# quadrature

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  LICENSE  LICENSE-content.md  README.md  ROADMAP.md  astro.config.mjs  package-lock.json  package.json
producer/: pyproject.toml
producer/src/quadrature_producer/: __init__.py  build.py  derive.py  dims.py  emit.py  graph.py  kinematics.py  practice.py  prove.py  reference.py  solve.py  util.py
producer/src/quadrature_producer/models/: __init__.py  adiabatic.py  base.py  capacitor_energy.py  collision.py  constant_accel.py  coulomb_pe.py  damped_shm.py  decay.py  disk_field.py  energy_conservation.py  faraday_induction.py  gravity_pe.py  hydrostatic_force.py  impulse.py  incline_friction.py  isobaric_work.py  lc_oscillation.py  line_charge_field.py  linear_drag.py  moment_of_inertia.py  orbit.py  projectile.py  pv_work.py  rc_charging.py  rotation.py  rotational_work.py  shm.py  standing_wave.py  thin_lens.py  torricelli.py  work_energy.py
producer/tests/: test_adiabatic.py  test_capacitor.py  test_collision.py  test_coulomb_pe.py  test_damped.py  test_dims.py  test_disk_field.py  test_drag.py  test_energy_conservation.py  test_faraday.py  test_gravity_pe.py  test_hydrostatic_force.py  test_impulse_rotation.py  test_isobaric.py  test_kinematics.py  test_lc.py  test_moment_of_inertia.py  test_orbit.py  test_phase5_lessons.py  test_projectile.py  test_prove.py  test_pv_work.py  test_rc_charging.py  test_rotational_work.py  test_shm.py  test_standing.py  test_thin_lens.py  test_work_energy.py
(+215 files in other folders)
