[project]
name = "quadrature-producer"
version = "0.1.0"
description = "Build-time SymPy producer: problem/formula specs -> verified, schema-valid solution & reference JSON"
requires-python = ">=3.13"
dependencies = [
    "sympy==1.14.0",
    "matplotlib>=3.9",
]

[project.scripts]
build-problems = "quadrature_producer.build:build_problems_main"
build-reference = "quadrature_producer.build:build_reference_main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quadrature_producer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
